# 3D-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
assets/models/cube/: cube.blend  cube.blend1
assets/shaders/: fragment.frag  vertex.vert
config/: player.yaml
include/: AssetManager.h  Block.h  BlockManager.h  BlockModel.h  BlockType.h  Chunk.h  Configs.h  Game.h  ItemType.h  Player.h  World.h  main.h
src/: AssetManager.cpp  Block.cpp  BlockManager.cpp  Chunk.cpp  Configs.cpp  Game.cpp  Player.cpp  World.cpp  main.cpp
